--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
                     <div class="box">
                       <i class="fa-solid fa-user"></i>
                       <h6>150</h6>
-                      <p>Clietns</p>
+                      <p>Clients</p>
                     </div>
                     <div class="box">
                       <i class="fa-solid fa-file-code"></i>
